<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20ssp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arialbd"
            android:text="@string/sign_in_title"
            android:textColor="@color/black13"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:text="@string/sign_in_description"
            android:textColor="@color/gray7C"
            android:textSize="@dimen/_11ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="vunh" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15ssp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/_40ssp"
                android:text="vunh"
                android:theme="@style/EdittextGey"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10ssp"
            android:paddingHorizontal="@dimen/_20ssp"
            android:text="@string/sign_in_title"
            app:icon="@drawable/ic_arrow_right"
            app:iconSize="@dimen/_16ssp"
            app:iconGravity="end"
            android:textAllCaps="true"  />

        <TextView
            android:id="@+id/sign_in_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:text="@string/sign_in_forgot_password"/>

    </LinearLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/layout_loading_custom"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
